--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,8 @@
 
 
+
 generate_arduino_library(RF24Lib
         BOARD nano
         SRCS RF24.cpp
-        HDRS RF24_config.h RF24.h
+        HDRS utility/Due/RF24_arch_config.h RF24_config.h RF24.h
         )
